--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 }
 </script>
   <title>Mingyuan Lin</title>
-
+  <link rel="icon" href="/authors/admin/bulb.png" sizes="16x16">
 </head>
 
 <body id="top" data-spy="scroll" data-offset="70" data-target="#navbar-main" >
