--- a/index.html
+++ b/index.html
@@ -227,10 +227,22 @@
     </div>
     <div class="row">
         <ul class="ul-papers">
-          
-          <li>
+        <li>
           <div class="description">
-            <p class="title">Image stitching by disparity-guided multi-plane alignment</p>
+            <p class="title">Unsupervised Deep Homography with Multi-scale Global Attention</p>
+            <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, Haoyu Zhou</p>
+            <p class="institution">IET Image Processing, 2023</p>
+            <p class="resources">
+              [
+                <a href = "https://doi.org/10.1049/ipr2.12842">Paper</a>
+              ]
+            </p>
+          </div> 
+        </li>
+          
+        <li>
+          <div class="description">
+            <p class="title">Image Stitching by Disparity-guided Multi-plane Alignment</p>
             <p class="authors"><b>Mingyuan Lin</b>, Tangbo Liu, Ying Li, Xinpeng Miao, Chu He</p>
             <p class="institution">Signal Processing, 197:108534, 2022</p>
             <p class="resources">
