--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <div class="description">
             <p class="title">Unsupervised Deep Homography with Multi-scale Global Attention</p>
             <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, Haoyu Zhou</p>
-            <p class="institution">IET Image Processing, 2023</p>
+            <p class="institution">IET Image Processing, 17, 2937–2948, 2023</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1049/ipr2.12842">Paper</a>
@@ -257,7 +257,7 @@
           <div class="description">
             <p class="title">Automatic Pavement Crack Detection Using HMRF-EM Algorithm</p>
             <p class="authors"><b>Mingyuan Lin</b>, Rundi Zhou, Qing Yan, Xin Xu</p>
-            <p class="institution"> International Conference on Computer, Information and Telecommunication Systems (CITS), 2019</p>
+            <p class="institution"> in International Conference on Computer, Information and Telecommunication Systems (CITS), 2019</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1109/CITS.2019.8862067">Paper</a>
@@ -270,7 +270,7 @@
           <div class="description">
             <p class="title">Three-dimensional Pavement Disease Detection based on Three components Decomposition and TUFF Algorithm</p>
             <p class="authors">Rundi Zhou, <b>Mingyuan Lin</b>, Yuhao Xia, Xuegang Shi</p>
-            <p class="institution">IEEE International Conference on Information Communication and Signal Processing (ICICSP), 2019 </p>
+            <p class="institution">in IEEE International Conference on Information Communication and Signal Processing (ICICSP), 2019 </p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1109/ICICSP48821.2019.8958594">Paper</a>
