--- a/index.html
+++ b/index.html
@@ -307,6 +307,23 @@
     </div>
   </section>
 
+<section id="services" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
+    <div class="container">
+
+<div class="row">  
+    <div class="col-lg-12">
+      <h1>Services</h1>      
+      <!-- <h2 id="ms-students">MS students</h2> -->
+<ul>
+
+<li>Conference Review: ICME2024</li>
+
+</ul>
+    </div>
+</div>
+    </div>
+  </section>
+  
 <!--
 <section id="activities" class="home-section wg-blank   " style="padding: 20px 0 20px 0;" >
     <div class="container">
