--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
           <a class="nav-link " href="/#awards" data-target="#awards"><span>Awards &amp; Honors</span></a>
         </li>
 
-
+        <li class="nav-item">
+          <a class="nav-link " href="/#services" data-target="#services"><span>Services</span></a>
+        </li>
+        
       </ul>
     </div>
 
