--- a/index.html
+++ b/index.html
@@ -232,8 +232,21 @@
         <ul class="ul-papers">
         <li>
           <div class="description">
+            <p class="title">Video Frame Interpolation with Stereo Event and Intensity Cameras</p>
+            <p class="authors">Chao Ding, <b>Mingyuan Lin</b>, Haijian Zhang, Jianzhuang Liu, and Lei Yu</p>
+            <p class="institution">IEEE Transactions on Multimedia, 2024</p>
+            <p class="resources">
+              [
+                <a href = "https://doi.org/10.1109/TMM.2024.3387690">Paper</a>
+              ]
+            </p>
+          </div> 
+        </li>
+
+        <li>
+          <div class="description">
             <p class="title">Unsupervised Deep Homography with Multi-scale Global Attention</p>
-            <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, Haoyu Zhou</p>
+            <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, and Haoyu Zhou</p>
             <p class="institution">IET Image Processing, 17, 2937–2948, 2023</p>
             <p class="resources">
               [
@@ -246,7 +259,7 @@
         <li>
           <div class="description">
             <p class="title">Image Stitching by Disparity-guided Multi-plane Alignment</p>
-            <p class="authors"><b>Mingyuan Lin</b>, Tangbo Liu, Ying Li, Xinpeng Miao, Chu He</p>
+            <p class="authors"><b>Mingyuan Lin</b>, Tangbo Liu, Ying Li, Xinpeng Miao, and Chu He</p>
             <p class="institution">Signal Processing, 197:108534, 2022</p>
             <p class="resources">
               [
@@ -259,7 +272,7 @@
         <li>
           <div class="description">
             <p class="title">Automatic Pavement Crack Detection Using HMRF-EM Algorithm</p>
-            <p class="authors"><b>Mingyuan Lin</b>, Rundi Zhou, Qing Yan, Xin Xu</p>
+            <p class="authors"><b>Mingyuan Lin</b>, Rundi Zhou, Qing Yan, and Xin Xu</p>
             <p class="institution"> in International Conference on Computer, Information and Telecommunication Systems (CITS), 2019</p>
             <p class="resources">
               [
@@ -272,7 +285,7 @@
         <li>
           <div class="description">
             <p class="title">Three-dimensional Pavement Disease Detection based on Three components Decomposition and TUFF Algorithm</p>
-            <p class="authors">Rundi Zhou, <b>Mingyuan Lin</b>, Yuhao Xia, Xuegang Shi</p>
+            <p class="authors">Rundi Zhou, <b>Mingyuan Lin</b>, Yuhao Xia, and Xuegang Shi</p>
             <p class="institution">in IEEE International Conference on Information Communication and Signal Processing (ICICSP), 2019 </p>
             <p class="resources">
               [
