--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
               [
                 <a href = "https://doi.org/10.1109/TMM.2024.3387690">Paper</a>
               ]
+              [
+                <a href = "https://dingchao1214.github.io/web_sevfi/">Website</a>
+              ]
             </p>
           </div> 
         </li>
