--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div class="description">
             <p class="title">Video Frame Interpolation with Stereo Event and Intensity Cameras</p>
             <p class="authors">Chao Ding, <b>Mingyuan Lin</b>, Haijian Zhang, Jianzhuang Liu, and Lei Yu</p>
-            <p class="institution"><i>IEEE Transactions on Multimedia</i>, 2024</p>
+            <p class="institution"><i>IEEE Transactions on Multimedia</i>, 2024.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1109/TMM.2024.3387690">Paper</a>
@@ -250,7 +250,7 @@
           <div class="description">
             <p class="title">Unsupervised Deep Homography with Multi-scale Global Attention</p>
             <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, and Haoyu Zhou</p>
-            <p class="institution"><i>IET Image Processing</i>, 17, 2937–2948, 2023</p>
+            <p class="institution"><i>IET Image Processing</i>, 17, 2937–2948, 2023.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1049/ipr2.12842">Paper</a>
@@ -263,7 +263,7 @@
           <div class="description">
             <p class="title">Image Stitching by Disparity-guided Multi-plane Alignment</p>
             <p class="authors"><b>Mingyuan Lin</b>, Tangbo Liu, Ying Li, Xinpeng Miao, and Chu He</p>
-            <p class="institution"><i>Signal Processing</i>, 197:108534, 2022</p>
+            <p class="institution"><i>Signal Processing</i>, 197:108534, 2022.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1016/j.sigpro.2022.108534">Paper</a>
@@ -276,7 +276,7 @@
           <div class="description">
             <p class="title">Automatic Pavement Crack Detection Using HMRF-EM Algorithm</p>
             <p class="authors"><b>Mingyuan Lin</b>, Rundi Zhou, Qing Yan, and Xin Xu</p>
-            <p class="institution"> in <i>International Conference on Computer, Information and Telecommunication Systems (CITS)</i>, 2019</p>
+            <p class="institution"> in <i>International Conference on Computer, Information and Telecommunication Systems (CITS)</i>, 2019.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1109/CITS.2019.8862067">Paper</a>
@@ -289,7 +289,7 @@
           <div class="description">
             <p class="title">Three-dimensional Pavement Disease Detection based on Three components Decomposition and TUFF Algorithm</p>
             <p class="authors">Rundi Zhou, <b>Mingyuan Lin</b>, Yuhao Xia, and Xuegang Shi</p>
-            <p class="institution">in <i>IEEE International Conference on Information Communication and Signal Processing (ICICSP)</i>, 2019 </p>
+            <p class="institution">in <i>IEEE International Conference on Information Communication and Signal Processing (ICICSP)</i>, 2019.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1109/ICICSP48821.2019.8958594">Paper</a>
