--- a/index.html
+++ b/index.html
@@ -232,6 +232,22 @@
         <ul class="ul-papers">
         <li>
           <div class="description">
+            <p class="title">CrossZoom: Simultaneous Motion Deblurring and Event Super-Resolving</p>
+            <p class="authors">Chi Zhang, Xiang Zhang, <b>Mingyuan Lin</b>, Cheng Li, Chu He, Wen Yang, Gui-Song Xia, and Lei Yu</p>
+            <p class="institution"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2024.</p>
+            <p class="resources">
+              [
+                <a href = "https://doi.org/10.1109/TPAMI.2024.3402972">Paper</a>
+              ]
+              [
+                <a href = "https://bestrivenzc.github.io/CZ-Net/">Website</a>
+              ]
+            </p>
+          </div> 
+        </li>
+
+        <li>
+          <div class="description">
             <p class="title">Video Frame Interpolation with Stereo Event and Intensity Cameras</p>
             <p class="authors">Chao Ding, <b>Mingyuan Lin</b>, Haijian Zhang, Jianzhuang Liu, and Lei Yu</p>
             <p class="institution"><i>IEEE Transactions on Multimedia</i>, 2024.</p>
@@ -317,8 +333,8 @@
 <li><i>First Class</i>, Graduate Student Scholarship of Wuhan University, 2022</li>
 <li><i>Excellent Award</i>, Project of Innovation and Entrepreneurship Training for Undergraduates, 2019</li>
 <li>Outstanding Student Scholarship of Wuhan University, 2018, 2019</li>
-<li><i>3-rd Prize</i>, Central China Division of National Undergraduate Electronics Design Contest, 2018</li>
-<li><i>2-nd Prize</i>, Central China Undergraduate Mathematical Modeling Invitational Contest, 2018</li>
+<!-- <li><i>3-rd Prize</i>, Central China Division of National Undergraduate Electronics Design Contest, 2018</li> -->
+<!-- <li><i>2-nd Prize</i>, Central China Undergraduate Mathematical Modeling Invitational Contest, 2018</li> -->
 
 </ul>
     </div>
