--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       <!-- <h2 id="ms-students">MS students</h2> -->
 <ul>
 
-<li>Conference Review: ICME2024</li>
+<li>Conference Review: ECCV2024, ICME2024</li>
 
 </ul>
     </div>
