--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="description">
             <p class="title">Unsupervised Deep Homography with Multi-scale Global Attention</p>
             <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, and Haoyu Zhou</p>
-            <p class="institution"><i>IET Image Processing</i>, 17, 2937–2948, 2023.</p>
+            <p class="institution"><i>IET Image Processing</i>, 2023.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1049/ipr2.12842">Paper</a>
@@ -279,7 +279,7 @@
           <div class="description">
             <p class="title">Image Stitching by Disparity-guided Multi-plane Alignment</p>
             <p class="authors"><b>Mingyuan Lin</b>, Tangbo Liu, Ying Li, Xinpeng Miao, and Chu He</p>
-            <p class="institution"><i>Signal Processing</i>, 197:108534, 2022.</p>
+            <p class="institution"><i>Signal Processing</i>, 2022.</p>
             <p class="resources">
               [
                 <a href = "https://doi.org/10.1016/j.sigpro.2022.108534">Paper</a>
