--- a/index.html
+++ b/index.html
@@ -264,6 +264,19 @@
 
         <li>
           <div class="description">
+            <p class="title">Learning Depth from Focus with Event Focal Stack</p>
+            <p class="authors">Chenxu Jiang, <b>Mingyuan Lin</b>, Chi Zhang, Zhenghai Wang, and Lei Yu</p>
+            <p class="institution"><i>IEEE Sensors Journal</i>, 2024.</p>
+            <p class="resources">
+              [
+                <a href = "https://doi.org/10.1109/JSEN.2024.3495816">Paper</a>
+              ]
+            </p>
+          </div> 
+        </li>
+
+        <li>
+          <div class="description">
             <p class="title">Unsupervised Deep Homography with Multi-scale Global Attention</p>
             <p class="authors">Wei Hu, Chu He, <b>Mingyuan Lin</b>, and Haoyu Zhou</p>
             <p class="institution"><i>IET Image Processing</i>, 2023.</p>
