--- a/index.html
+++ b/index.html
@@ -232,6 +232,19 @@
         <ul class="ul-papers">
         <li>
           <div class="description">
+            <p class="title">Non-Uniform Exposure Imaging via Neuromorphic Shutter Control</p>
+            <p class="authors"><b>Mingyuan Lin</b>, Jian Liu, Chi Zhang, Zibo Zhao, Chu He, and Lei Yu</p>
+            <p class="institution"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2025.</p>
+            <p class="resources">
+              [
+                <a href = "https://arxiv.org/abs/2404.13972">Paper</a>
+              ]
+            </p>
+          </div> 
+        </li>
+          
+        <li>
+          <div class="description">
             <p class="title">CrossZoom: Simultaneous Motion Deblurring and Event Super-Resolving</p>
             <p class="authors">Chi Zhang, Xiang Zhang, <b>Mingyuan Lin</b>, Cheng Li, Chu He, Wen Yang, Gui-Song Xia, and Lei Yu</p>
             <p class="institution"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2024.</p>
