--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       <!-- <h2 id="ms-students">MS students</h2> -->
 <ul>
 
-<li>Conference Review: ECCV2024, ICME2024</li>
+<li>Conference Review: CVPR, ECCV, ICME</li>
 <li>Journal Review: IEEE TCSVT</li>
 
 </ul>
