--- a/index.html
+++ b/index.html
@@ -230,6 +230,19 @@
     </div>
     <div class="row">
         <ul class="ul-papers">
+        <!-- <li>
+          <div class="description">
+            <p class="title">Self-Supervised Shutter Unrolling with Events</p>
+            <p class="authors"><b>Mingyuan Lin</b><sup>*</sup>, Yangguang Wang<sup>*</sup>, Xiang Zhang, Boxin Shi, Wen Yang, Chu He, Gui-song Xia, and Lei Yu</p>
+            <p class="institution"><i>International Journal of Computer Vision</i>, 2025.</p>
+            <p class="resources">
+              [
+                <a href = "https://w3un.github.io/selfunroll/">Website</a>
+              ]
+            </p>
+          </div> 
+        </li> -->
+          
         <li>
           <div class="description">
             <p class="title">Non-Uniform Exposure Imaging via Neuromorphic Shutter Control</p>
@@ -327,7 +340,7 @@
           </div> 
         </li>
 
-        <li>
+        <!-- <li>
           <div class="description">
             <p class="title">Three-dimensional Pavement Disease Detection based on Three components Decomposition and TUFF Algorithm</p>
             <p class="authors">Rundi Zhou, <b>Mingyuan Lin</b>, Yuhao Xia, and Xuegang Shi</p>
@@ -338,7 +351,7 @@
               ]
             </p>
           </div> 
-        </li>
+        </li> -->
         </ul>      
     </div>  
 </div>
