--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
             </p>
           </div> 
         </li> -->
+        <sup>*</sup> means equal contribution.
         </ul>      
     </div>  
 </div>
