--- a/index.html
+++ b/index.html
@@ -352,7 +352,11 @@
             </p>
           </div> 
         </li> -->
-        <sup>*</sup> means equal contribution.
+        <li>
+          <div class="description">
+            <sup>*</sup> means equal contribution.
+          </div>
+        </li>
         </ul>      
     </div>  
 </div>
