--- a/index.html
+++ b/index.html
@@ -185,7 +185,13 @@
             <div class="description">
               <a href="https://github.com/mingyuan-lin">https://github.com/mingyuan-lin</a>
             </div> 
-          </li>   
+          </li>
+          <li>  
+            <i class="fas fa-fw fa-graduation-cap"></i>
+            <div class="description">
+              <a href="https://scholar.google.com/citations?user=pfhoSpUAAAAJ&hl=en">Google Scholar</a>
+            </div> 
+          </li> 
         </ul>        
       </div>
       
@@ -237,6 +243,9 @@
             <p class="institution"><i>International Journal of Computer Vision</i>, 2025.</p>
             <p class="resources">
               [
+                <a href = "https://doi.org/10.1109/TPAMI.2024.3402972">Paper</a>
+              ]    
+              [
                 <a href = "https://w3un.github.io/selfunroll/">Website</a>
               ]
             </p>
@@ -250,7 +259,7 @@
             <p class="institution"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2025.</p>
             <p class="resources">
               [
-                <a href = "https://arxiv.org/abs/2404.13972">Paper</a>
+                <a href = "https://doi.org/10.1109/TPAMI.2025.3526280">Paper</a>
               ]
             </p>
           </div> 
