--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div> 
           </li>
           <li>  
-            <i class="fas fa-fw fa-graduation-cap"></i>
+            <i class="fa-li fab fa-graduation-cap"></i>
             <div class="description">
               <a href="https://scholar.google.com/citations?user=pfhoSpUAAAAJ&hl=en">Google Scholar</a>
             </div> 
