--- a/index.html
+++ b/index.html
@@ -236,21 +236,21 @@
     </div>
     <div class="row">
         <ul class="ul-papers">
-        <!-- <li>
+        <li>
           <div class="description">
             <p class="title">Self-Supervised Shutter Unrolling with Events</p>
             <p class="authors"><b>Mingyuan Lin</b><sup>*</sup>, Yangguang Wang<sup>*</sup>, Xiang Zhang, Boxin Shi, Wen Yang, Chu He, Gui-song Xia, and Lei Yu</p>
             <p class="institution"><i>International Journal of Computer Vision</i>, 2025.</p>
             <p class="resources">
-              [
+              <!-- [
                 <a href = "https://doi.org/10.1109/TPAMI.2024.3402972">Paper</a>
-              ]    
+              ]  -->  
               [
                 <a href = "https://w3un.github.io/selfunroll/">Website</a>
               ]
             </p>
           </div> 
-        </li> -->
+        </li>
           
         <li>
           <div class="description">
@@ -336,7 +336,7 @@
           </div> 
         </li>
           
-        <li>
+        <!-- <li>
           <div class="description">
             <p class="title">Automatic Pavement Crack Detection Using HMRF-EM Algorithm</p>
             <p class="authors"><b>Mingyuan Lin</b>, Rundi Zhou, Qing Yan, and Xin Xu</p>
@@ -349,7 +349,7 @@
           </div> 
         </li>
 
-        <!-- <li>
+        <li>
           <div class="description">
             <p class="title">Three-dimensional Pavement Disease Detection based on Three components Decomposition and TUFF Algorithm</p>
             <p class="authors">Rundi Zhou, <b>Mingyuan Lin</b>, Yuhao Xia, and Xuegang Shi</p>
@@ -363,7 +363,7 @@
         </li> -->
         <li>
           <div class="description">
-            <sup>*</sup> means equal contribution.
+            <sup>*</sup> means equal contribution.<!-- and <sup>†</sup> indicates my supervisor.-->
           </div>
         </li>
         </ul>      
