--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
           <li>  
             <i class="fa-li fas fa-map-marker"></i>
             <div class="description">
-              <p class="course">Wuhan, China, 430061</p>
+              <p class="course">Wuhan, China</p>
             </div> 
           </li>
           <li>          
             <i class="fa-li fas fa-envelope"></i>
             <div class="description">
-              <a href="mailto:linmingyuan@whu.edu.cn">linmingyuan@whu.edu.cn</a>
+              <a href="mailto:linmingyuan@whu.edu.cn">Email</a>
             </div>
           </li>
           <li>  
             <i class="fa-li fab fa-github"></i>
             <div class="description">
-              <a href="https://github.com/mingyuan-lin">https://github.com/mingyuan-lin</a>
+              <a href="https://github.com/mingyuan-lin">Github</a>
             </div> 
           </li>
           <li>  
