--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
             <p class="authors"><b>Mingyuan Lin</b><sup>*</sup>, Yangguang Wang<sup>*</sup>, Xiang Zhang, Boxin Shi, Wen Yang, Chu He, Gui-song Xia, and Lei Yu</p>
             <p class="institution"><i>International Journal of Computer Vision</i>, 2025.</p>
             <p class="resources">
-              <!-- [
-                <a href = "https://doi.org/10.1109/TPAMI.2024.3402972">Paper</a>
-              ]  -->  
+              [
+                <a href = "https://doi.org/10.1007/s11263-025-02364-z">Paper</a>
+              ]
               [
                 <a href = "https://w3un.github.io/selfunroll/">Website</a>
               ]
