--- a/index.html
+++ b/index.html
@@ -236,6 +236,23 @@
     </div>
     <div class="row">
         <ul class="ul-papers">
+
+        <li>
+          <div class="description">
+            <p class="title">Learning Parallax for Stereo Event-based Motion Deblurring</p>
+            <p class="authors"><b>Mingyuan Lin</b>, Chi Zhang, Chu He, and Lei Yu</p>
+            <p class="institution"><i>IEEE Transactions on Circuits and Systems for Video Technology</i>, 2025.</p>
+            <p class="resources">
+              [
+                <a href = https://doi.org/10.1109/TCSVT.2025.3570786">Paper</a>
+              ]
+              [
+                <a href = "https://mingyuan-lin.github.io/St-ED_web/">Website</a>
+              ]
+            </p>
+          </div> 
+        </li>
+
         <li>
           <div class="description">
             <p class="title">Self-Supervised Shutter Unrolling with Events</p>
@@ -251,7 +268,7 @@
             </p>
           </div> 
         </li>
-          
+
         <li>
           <div class="description">
             <p class="title">Non-Uniform Exposure Imaging via Neuromorphic Shutter Control</p>
@@ -264,7 +281,7 @@
             </p>
           </div> 
         </li>
-          
+
         <li>
           <div class="description">
             <p class="title">CrossZoom: Simultaneous Motion Deblurring and Event Super-Resolving</p>
@@ -404,7 +421,7 @@
       <!-- <h2 id="ms-students">MS students</h2> -->
 <ul>
 
-<li>Conference Review: CVPR, ECCV, ICME</li>
+<li>Conference Review: CVPR, ICCV, ECCV, ICME</li>
 <li>Journal Review: IEEE TCSVT</li>
 
 </ul>
