--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <p class="institution"><i>IEEE Transactions on Circuits and Systems for Video Technology</i>, 2025.</p>
             <p class="resources">
               [
-                <a href = https://doi.org/10.1109/TCSVT.2025.3570786">Paper</a>
+                <a href = "https://doi.org/10.1109/TCSVT.2025.3570786">Paper</a>
               ]
               [
                 <a href = "https://mingyuan-lin.github.io/St-ED_web/">Website</a>
