--- a/index.html
+++ b/index.html
@@ -238,8 +238,10 @@
         <ul class="ul-papers">
 
         <li>
+          <div class="img">
+            <img src="/figures/nsc.png" class="img-responsive" alt>
+          </div>
           <div class="description">
-            
             <p class="title">Non-Uniform Exposure Imaging via Neuromorphic Shutter Control</p>
             <p class="authors"><b>Mingyuan Lin</b>, Jian Liu, Chi Zhang, Zibo Zhao, Chu He, and Lei Yu</p>
             <p class="institution"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i>, 2025.</p>
