--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
         </li>
 
         <li>
+          <div class="img">
+            <img src="/figures/selfunroll.png" class="img-responsive" alt>
+          </div>
           <div class="description">
             <p class="title">Self-Supervised Shutter Unrolling with Events</p>
             <p class="authors"><b>Mingyuan Lin</b><sup>*</sup>, Yangguang Wang<sup>*</sup>, Xiang Zhang, Boxin Shi, Wen Yang, Chu He, Gui-song Xia, and Lei Yu</p>
@@ -270,6 +273,9 @@
         </li>
 
         <li>
+          <div class="img">
+            <img src="/figures/sted.png" class="img-responsive" alt>
+          </div>
           <div class="description">
             <p class="title">Learning Parallax for Stereo Event-based Motion Deblurring</p>
             <p class="authors"><b>Mingyuan Lin</b>, Chi Zhang, Chu He, and Lei Yu</p>
